--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
 
 
-    <H1>This is my first guthub page & I am so happy to share it with you!!</H1>
+    <h1>This is my first guthub page & I am so happy to share it with you!!</h1>
 
 
 
