--- a/index.html
+++ b/index.html
@@ -1,18 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Chef akv's kitchen!</title>
-
-
-
+        <meta charset="utf-8">
+        <title>Crazy all html features</title>
     </head>
     <body>
-
-
-    <h1>This is my first guthub page & I am so happy to share it with you!!</h1>
+        <h1>This is h1</h1>
+        <h2>This is h2</h2>
+        <h3>This is h3</h3>
+        <h4>This is h4</h4>
+        <h5>This is h5</h5>
+        <h6>This is h6</h6>
+        <p>This is a paragraph. In this paragraph I write words in <em>italics,</em><strong>Bold or Strong </strong> etc.,</p> 
+        <p>Before we move to the next one, lets make a sentance both strong and italics like this one - <em><strong>This is both italics as well as bold.</strong></em></p>
+        <p>Now its time for some list items.</p>
+        <p>Below is called "unordered list - which is basically bullet points"</p>
+        <ul>
+            <li>Point no. one</li>
+            <li>Point no. two</li>
+            <li>Point no. three</li>
+            <li>Point no. four</li>
+        </ul>
+        <p>Now, here is ordered list. These are nothing but bullet points which are numbered.</p>
+        <ol>
+            <li>Point no. one</li>
+            <li>Point no. two</li>
+            <li>Point no. three</li>
+            <li>Point no. four</li>
+        </ol>
+        <p>To go the next line we need to use the line break. <br/>
+        Now as you see there is a space between this and the previous line. Thats because of the br/ tag. <br/> Now if you need more lines you can use multiple "br" tag. <br/><br/><br/> Here (above) I have used 3 "br" tag.</p>
+        <p>Now if you want to separate a segment using horizontal line (rule) we need to use the hr/ tag like below.<br/></p>
+        <hr/>
+        <p>Let me add one more here just for fun.</p>
+        <hr/>
+        <br/>
+        <p>Note the trailing / in br and hr are optional. I choose NOT to use them as they confuse me. I get confused if br/ or /br should be used. </p>
+        <hr>
+        <br>
+        <h2>Links and Images</h2>
+        <p>In this section we will be dealing with links and images.
+            Here I am linking a page called "image" with anchor tag, so it will become <a href="Links_and_Images/image.html" target="_blank">image</a><br>
+            Now, after heref, if you user target="_blank" within the anchor tag, it will open the image link in new tab instead of loding the page in the same current browser tab.
+    
+        </p>
 
 
 
 
     </body>
+
+
 </html>
